--- a/upload.html
+++ b/upload.html
@@ -49,13 +49,13 @@
         <li>工坊
         <br><s>更新日志</s>
         <li>科技树
-        <li>选项卡UI
+        <li><s>选项卡UI</s>
         <li>选项卡模板
         <br><s>主页UI</s>
-        <li>设置UI
+        <li>><s>设置UI</s>
         <li>资源过滤
-        <li>日志UI
-        <li>日志分类
+        <li><s>日志UI</s>
+        <li><s>日志分类</s>
         <li>建筑数量浮层
         <li>建筑资源生产预览
         <br><s>页面布局</s>
@@ -63,8 +63,10 @@
     </div>
     <div style="position: absolute; left: 60%; text-align: center;">
         <h3>更新日志:</h3>
+        v0.02<br>
+        重新制作UI<br>
         v0.01<br>
-        完成了最基础的模板以及日志
+        完成了最基础的模板以及日志<br>
     </div>
 </body>
 </html>
