--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 	<div id="rightColumn" class="column" style="vertical-align: top;">
 		<div>
 			<t id="styleLog1" class="logTypes" onclick="player.logsType='none'">全部</t>
+			<t id="styleLog4" class="logTypes" onclick="player.logsType='news'">通知</t>
 			<t id="styleLog2" class="logTypes" onclick="player.logsType='building'">建筑</t>
 			<t id="styleLog3" class="logTypes" onclick="player.logsType='action'">行动</t>
 		</div>
