--- a/upload.html
+++ b/upload.html
@@ -49,13 +49,13 @@
         <li>工坊
         <br><s>更新日志</s>
         <li>科技树
-        <li><s>选项卡UI</s>
+        <br><s>选项卡UI</s>
         <li>选项卡模板
         <br><s>主页UI</s>
-        <li>><s>设置UI</s>
+        <br><s>设置UI</s>
         <li>资源过滤
-        <li><s>日志UI</s>
-        <li><s>日志分类</s>
+        <br><s>日志UI</s>
+        <br><s>日志分类</s>
         <li>建筑数量浮层
         <li>建筑资源生产预览
         <br><s>页面布局</s>
