--- a/upload.html
+++ b/upload.html
@@ -35,38 +35,16 @@
         <br>
         <h1>起源科技</h1>
     </div>
-    <div style="position: absolute; left: 33%;">
-        <h3>目标:</h3>
-        <br><s>资源基础逻辑</s>
-        <br><s>保存</s>
-        <br><s>资源模板</s>
-        <br><s>资源进度条</s>
-        <br><s>选项卡</s>
-        <br><s>建筑模板</s>
-        <br><s>研究模板</s>
-        <br><s>设置</s>
-        <br><s>日志</s>
-        <li>工坊
-        <br><s>更新日志</s>
-        <li>科技树
-        <br><s>选项卡UI</s>
-        <li>选项卡模板
-        <br><s>主页UI</s>
-        <br><s>设置UI</s>
-        <li>资源过滤
-        <br><s>日志UI</s>
-        <br><s>日志分类</s>
-        <li>建筑数量浮层
-        <li>建筑资源生产预览
-        <br><s>页面布局</s>
-        <li>更多设置
-    </div>
-    <div style="position: absolute; left: 60%; text-align: center;">
+    <div style="text-align: center;">
         <h3>更新日志:</h3>
-        v0.02<br>
-        重新制作UI<br>
-        v0.01<br>
+        <big><big>v0.01</big></big><br>
         完成了最基础的模板以及日志<br>
+        <big><big>v0.02</big></big><br>
+        重新制作UI<br>
+        <big>v0.023</big><br>
+        更多设置<br>
+        若有若无的背景<br>
+        时间通量<br>
     </div>
 </body>
 </html>
