--- a/upload.html
+++ b/upload.html
@@ -43,8 +43,16 @@
         重新制作UI<br>
         <big>v0.023</big><br>
         更多设置<br>
-        若有若无的背景<br>
+        若有若无的背景介绍<br>
+        修整UI<br>
+        工坊模板<br>
+        优化研究<br>
         时间通量<br>
+        <big>v0.023</big><br>
+        重新制作/策划游戏流程,修改背景<br>
+        加载动画<br>
+        <big><big>v0.03</big></big><br>
+        新的开始!<br>
     </div>
 </body>
 </html>
