--- a/upload.html
+++ b/upload.html
@@ -53,6 +53,10 @@
         加载动画<br>
         <big><big>v0.03</big></big><br>
         新的开始!<br>
+        <big>v0.023</big><br>
+        修复了计数法显示错误的bug<br>
+        增加了手稿资源<br>
+        更好的colorText函数<br>
     </div>
 </body>
 </html>
