--- a/upload.html
+++ b/upload.html
@@ -53,10 +53,13 @@
         加载动画<br>
         <big><big>v0.03</big></big><br>
         新的开始!<br>
-        <big>v0.023</big><br>
+        <big>v0.031</big><br>
         修复了计数法显示错误的bug<br>
         增加了手稿资源<br>
         更好的colorText函数<br>
+        <big><big>v0.04</big></big><br>
+        <big>研究系统重置完毕</big>
+        <big>color.js以及更好的colotText函数</big>
     </div>
 </body>
 </html>
