--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 	<script src="js/load/js.js"></script>
 	<script src="js/load/tab.js"></script>
 	<script src="js/load/canvas.js"></script>
+	<script src="js/load/bar.js"></script>
 	<script src="js/load/log.js"></script>
+	<script src='js/load/color.js'></script>
 
 	<script src="js/setting/pointer.js"></script>
 	<script src="js/setting/setting.js"></script>
@@ -32,6 +34,7 @@
 	<script src="js/game/function/action.js"></script>
 
 	<script src="js/game/game.js"></script>
+
 	
 	<link rel="stylesheet" type="text/css" href="css/css.css"/>
 	<link rel="stylesheet" type="text/css" href="css/load.css"/>
@@ -52,23 +55,24 @@
 		</div>
 	</div>
 	<canvas id="treeCanvas" class="canvas"></canvas>
-	<a href="upload.html" target="_blank" class="version">v0.031</a>
+	<a href="upload.html" target="_blank" class="version">v0.04</a>
 	<a href="https://afdian.net/@Mysterious124" target="_blank" class="donate">点我捐助</a>
-	<i class="fa fa-cog setting" aria-hidden="true" onclick="showTab('setting')"></i>
+	<i class="fa fa-cog setting" aria-hidden=true onclick="showTab('setting')"></i>
 	<div id="game">
 		<div id="leftColumn" class="column" style="vertical-align: top;">
 			<a id="loadResource"></a>
 		</div>
 		<div id="midColumn" class="column" style="vertical-align: top">
 			<button class="maintab" onclick="showTab('main')">主页面</button>
-			<button class="maintab" onclick="showTab('research')" style="display: none;">研究</button>
+			<button class="maintab" id="tab_research_button" onclick="showTab('research')" style="display: none;">研究</button>
+			<hr>
 			<br>
 			<mainTab id="tab_setting" style="display: none;">
-				<button onclick="save()" class="settingBto">保存</button><br>
+				<button onclick="save('Origin_Research')" class="settingBto">保存</button><br>
 				<button onclick="autoSave()" class="settingBto">自动保存:<a id="autoSaveID"></a></button><br>
 				<button onclick="prompt('下面是你的存档:',saveStr)" id="export" class="settingBto">导出</button><br>
 				<button onclick="load(prompt('输入存档:'))" id="import" class="settingBto">导入</button><br>
-				<button onclick="if(!!confirm('你确定要硬重置吗?这样你将失去一切!!!')){if(!!confirm('这个存档将永远失去!(很长时间!)')){toClearSave = true}}" id="export"  class="settingBto">硬重置</button><br>
+				<button onclick="if(!!confirm('你确定要硬重置吗?这样你将失去一切!!!')){if(!!confirm('这个存档将永远失去!(很长时间!)')){hardReset('Origin_Research')}}" id="export"  class="settingBto">硬重置</button><br>
 				<button onclick="countingMethod()" class="settingBto">计数法:<a id="countingMethodID"></a></button><br>
 				<button onclick="flushLog()" class="settingBto">刷新日志重置:<a id="flushLogID"></a></button><br>
 			</mainTab>
@@ -76,8 +80,38 @@
 				<a id="loadMain"></a>
 			</mainTab>
 			<mainTab id="tab_research" style="display: none;">
-				研究<br>
-				<a id="loadResearchResource"></a>
+				<div>
+					<div style='position: absolute; margin-left:35px; margin-top:408px; text-align: center; width: 100px;' id="ResearchResourceOtherTextID"></div>
+					<div id="loadResearchResourceOtherBorderID"></div>
+					<tooltip id="ResearchResourceOtherTooltip"><button class="ResearchResourceOtherButton" id="ResearchResourceOtherButton" onclick="ResearchResourceOther()" style="color: var(--researchColor);text-shadow: 3px 3px 2px var(--researchColor2);">填 充<br>物 质</button></tooltip>
+				</div>
+				<div>
+					<div style='position: absolute; margin-left:235px; margin-top:408px; text-align: center; width: 100px;' id="ResearchResourceVoidTextID"></div>
+					<div id="loadResearchResourceBorderID"></div>
+					<tooltip id="ResearchResourceVoidTooltip"><button class="ResearchResourceVoidButton" id="ResearchResourceVoidButtonID" onclick="ResearchResourceVoid()" style="color: rgb(123, 25, 214);text-shadow: 3px 3px 2px rgb(123, 25, 214, 0.5);">填 充<br>能 量</button></tooltip>
+				</div>
+				<div>
+					<div style='position: absolute; margin-left:435px; margin-top:408px; text-align: center; width: 100px;' id="ResearchResourcePointTextID"></div>
+					<div id="loadResearchResourcePointBorderID"></div>
+					<tooltip id="ResearchResourcePointTooltip"><button class="ResearchResourcePointButton" id="ResearchResourcePointButtonID" onclick="ResearchResourcePut()" style="color: #3dd3f8;text-shadow: 3px 3px 2px rgb(61, 211, 248, 0.5);">取 出<br>研 究</button></tooltip>
+				</div>
+				<div style="position: absolute; margin-top:498px; margin-left:35px">
+					当前比例:<a id="ResearchScaleToggleID"></a><br>
+					<button class="ResearchResource" onclick="player.barToggle = player.barToggle.add(1).min(100)">+1%</button>
+					<button class="ResearchResource" onclick="player.barToggle = player.barToggle.add(1).min(100)">+5%</button>
+					<button class="ResearchResource" onclick="player.barToggle = player.barToggle.add(1).min(100)">+10%</button>
+					<button class="ResearchResource" onclick="player.barToggle = player.barToggle.add(25).min(100)">+25%</button>
+					<button class="ResearchResource" onclick="player.barToggle = player.barToggle.add(50).min(100)">+50%</button>
+					<button class="ResearchResource" onclick="player.barToggle = player.barToggle.add(100).min(100)">+100%</button>
+					<br>
+					<button class="ResearchResource" onclick="player.barToggle = player.barToggle.sub(1).max(0)">-1%</button>
+					<button class="ResearchResource" onclick="player.barToggle = player.barToggle.sub(5).max(0)">-5%</button>
+					<button class="ResearchResource" onclick="player.barToggle = player.barToggle.sub(10).max(0)">-10%</button>
+					<button class="ResearchResource" onclick="player.barToggle = player.barToggle.sub(25).max(0)">-25%</button>
+					<button class="ResearchResource" onclick="player.barToggle = player.barToggle.sub(50).max(0)">-50%</button>
+					<button class="ResearchResource" onclick="player.barToggle = player.barToggle.sub(100).max(0)">-100%</button>
+				</div>
+				<div id="loadResearchResource" style="position: absolute; margin-top:622px; margin-left:35px"></div>
 			</mainTab>
 		</div>
 	</div>
