--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		</div>
 	</div>
 	<canvas id="treeCanvas" class="canvas"></canvas>
-	<a href="upload.html" target="_blank" class="version">v0.04</a>
+	<a href="upload.html" class="version">v0.042</a>
 	<a href="https://afdian.net/@Mysterious124" target="_blank" class="donate">点我捐助</a>
 	<i class="fa fa-cog setting" aria-hidden=true onclick="showTab('setting')"></i>
 	<div id="game">
@@ -65,7 +65,6 @@
 		<div id="midColumn" class="column" style="vertical-align: top">
 			<button class="maintab" onclick="showTab('main')">主页面</button>
 			<button class="maintab" id="tab_research_button" onclick="showTab('research')" style="display: none;">研究</button>
-			<hr>
 			<br>
 			<mainTab id="tab_setting" style="display: none;">
 				<button onclick="save('Origin_Research')" class="settingBto">保存</button><br>
